# image_picker

./: .gitignore  README.md  aesthetic_scores.csv  pyproject.toml  test.py
artifacts/: personal_calibrator.pkl  personal_training_dataset.csv
artifacts/personal_calibrator/: negative.cache.json  positive.cache.json
scripts/: move_by_bucket.ps1  move_personal_buckets.ps1  move_personal_buckets.py  move_xinjiang_personal.py
src/image_picker/: __init__.py  calibrator.py  cli.py  io_utils.py  scoring.py  vlm.py
tests/: test_calibrator.py  test_io_utils.py  test_scoring.py
